:recycle: Changed some API parameters and getting foreground remove work
