# inference/src/models.py
@@ -10,12 +10,13 @@ class EngineRequest(BaseModel):
     """
 
     img: str
-    remove_white: bool
+    to_remove: str
+    color_removal: str
     secret_access: str
 
     class Config:
         schema_extra = dict(example=dict(
-            img=EXAMPLE_IMAGE_PATH, remove_white=True, secret_access='SECRET'
+            img=EXAMPLE_IMAGE_PATH, to_remove='background', color_removal='transparent', secret_access='SECRET'
         ))
 
 
